--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
         "koa-jwt": "^4.0.0",
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
+        "make-dir": "^3.1.0",
         "moment": "^2.27.0",
         "mongoose": "^5.10.0",
         "nodemailer": "^6.4.11",
         "redis": "^3.0.2",
         "saslprep": "^1.0.3",
-        "svg-captcha": "^1.4.0"
+        "svg-captcha": "^1.4.0",
+        "uuid": "^8.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
