--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "koa-helmet": "^4.2.0",
         "koa-json": "^2.0.2",
         "koa-jwt": "^4.0.0",
+        "koa-log4": "^2.3.2",
+        "koa-logger": "^3.2.1",
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
         "make-dir": "^3.1.0",
